<resources>
    <string name="app_name">小视频</string>

    <string name="btn_cancel">取消</string>
    <string name="btn_ok">确定</string>

    <!--loginActivity -->
    <string name="activity_login_login">登录</string>
    <string name="activity_login_register">注册新用户</string>
    <string name="activity_login_username">用户名</string>
    <string name="activity_login_password">密码</string>
    <!--loginActivity -->

    <!--registerActivity -->
    <string name="activity_register_register">注册</string>
    <string name="activity_register_username">用户名(4~24位字母、数字、下划线)</string>
    <string name="activity_register_password">密码(8~16位个字符)</string>
    <string name="activity_register_password_verify">确认密码</string>
    <!--registerActivity -->

    <!-- permission check-->

    <!-- userinfo fragment-->
    <string name="app_about">关于</string>
    <string name="btn_login_out">退出登录</string>

    <!-- TCVideoRecordActivity -->

    <!--ShortVideoDialog.java-->
    <string name="video_record_title">录制</string>
    <string name="video_editer_title">编辑</string>
    <string name="picture_editer_title">图片</string>

    <!--TCPictureChooseActivityvity-->

    <!--TCVideoPublishActivity-->

    <!--TCVideoEffectActivityvity-->

    <!--TCVideoPublishActivity-->

    <!--关于-->
    <string name="about_tip1">小视频是由腾讯视频云团队提供的一款原型级别的 APP，致力于以 DEMO 的形式向您展示腾讯视频云在短视频领域的各项能力。比如如何利用视频云 SDK 进行短视频的分段录制和编辑，如何利用对象存储（COS）服务实现视频上传和发布，如何使用点播（VOD）服务实现视频的分发。</string>

    <string name="language_setting_activity_language">语言</string>
    <string name="language_setting_activity_follow_system">跟随系统（重启生效）</string>
    <string name="language_setting_activity_save">保存</string>

    <string name="user_info_fragment_setting">设置</string>

    <string name="setting_activity_language">语言</string>
    <string name="setting_activity_setting">设置</string>


    <string name="fragment_user_info_please_lonin">请先登录</string>

    <string name="activity_register_register_new_user">注册新用户</string>

    <string name="tc_ugc_video_list_adapter_video_state_normal">已审核</string>
    <string name="tc_ugc_video_list_adapter_video_state_in_audit">审核中</string>
    <string name="tc_ugc_video_list_adapter_video_state_pornographic">涉黄</string>

    <string name="tc_ugc_video_list_adapter_just_now">刚刚</string>
    <string name="tc_ugc_video_list_adapter_mins_ago">分钟前</string>
    <string name="tc_ugc_video_list_adapter_hours_ago">小时前</string>
    <string name="tc_ugc_video_list_adapter_days_ago">天前</string>

    <string name="tc_ugc_video_list_adapter_min_ago">分钟前</string>
    <string name="tc_ugc_video_list_adapter_hour_ago">小时前</string>
    <string name="tc_ugc_video_list_adapter_day_ago">天前</string>

    <string name="fragment_videolist_no_content">暂无内容噢~</string>

    <string name="tc_login_activity_login_successfully">登录成功</string>
    <string name="tc_login_activity_auto_login_failed">自动登录失败</string>
    <string name="tc_login_activity_no_network_connection">当前无网络连接</string>
    <string name="tc_login_activity_password_length_tip">密码长度应为8-16位</string>
    <string name="tc_login_activity_username_does_not_meet_specifications">用户名不规范</string>

    <string name="tc_register_activity_attempt_normal_regist_username_does_not_meet_specifications">用户名不规范</string>
    <string name="tc_register_activity_attempt_normal_regist_password_length_error">密码长度应为8-16位</string>
    <string name="tc_register_activity_attempt_normal_regist_password_verify_error">两次输入密码不一致</string>
    <string name="tc_register_activity_attempt_normal_regist_no_network_connection">当前无网络连接</string>

    <string name="tc_register_activity_register_callback_register_successfully">注册成功</string>
    <string name="tc_register_activity_register_callback_auto_login_successfully">自动登录成功</string>
    <string name="tc_register_activity_register_callback_auto_login_failed">自动登录失败</string>
    <string name="tc_register_activity_register_callback_username_format_error">用户名格式错误</string>
    <string name="tc_register_activity_register_callback_password_format_error">密码格式错误</string>
    <string name="tc_register_activity_register_callback_username_already_exists">用户名已存在</string>
    <string name="tc_register_activity_register_callback_register_failed">注册失败:</string>


    <string name="tc_live_list_fragment_refresh_list_failed">刷新列表失败</string>


    <string name="tc_vod_player_activity_download_video_is_downloading">正在下载...</string>
    <string name="tc_vod_player_activity_download_video_download_failed">下载失败</string>

    //分割线 2018/7/24
    --------------------------------------------------------------------------------------------------

    <string name="chorus_title">合唱</string>
    <string name="video_not_review">视频未审核</string>
    <string name="video_porn">视频涉黄</string>

    <string name="record_part_exist">你有未录制完成的视频，是否继续？</string>

    <!--registerActivity  loginActivity-->
    <string name="technical_support">如何获取技术支持服务？</string>
    <string name="follow_public_number">关注公众号“腾讯云视频”</string>
    <string name="send_msg_to_public_number">给公众号发送“小视频”</string>

    <!-- userinfo fragment-->
    <string name="get_technical_support">获取技术支持服务</string>
    <string name="download_sdk"><a href='https://cloud.tencent.com/document/product/584/9366'>下载 SDK</a></string>
    <string name="product_introduction"><a href='https://cloud.tencent.com/product/UGSV'>产品介绍</a></string>

    <string name="follow_and_send_msg_to_public_number">关注公众号“腾讯云视频”\n给公众号发送“小视频”</string>

    <string name="login_user_approve">同意</string>
    <string name="login_user_refuse">不同意</string>
    <string name="login_toast_failed_to_set">设置失败: %s</string>
    <string name="login_confirm">确认</string>
    <string name="login_set_user_avatar">设置头像</string>
    <string name="login_toast_success_to_set_username">设置成功</string>
    <string name="login_protocol_start">我已阅读并同意</string>
    <string name="login_privacy_protocol_detail">《隐私条例》</string>
    <string name="login_user_agreement_detail">《用户协议》</string>
    <string name="login_protocol_and">和</string>
    <string name="login_privacy_protocol">隐私条例</string>
    <string name="login_user_agreement">用户协议</string>
    <string name="login_protocol_tip">请先同意隐私条款和用户协议</string>
    <string name="login_protocol_title">欢迎使用腾讯云小视频</string>
    <string name="login_protocol_tip_start">欢迎您使用腾讯云实时音视频，我们将通过</string>
    <string name="login_protocol_tip_end">帮助您了解我们收集、使用、存储个人信息的情况，此外您还可以了解到您所享有的相关权利和实现途径，如您同意请点击下方按钮开始接受我们的服务</string>
    <string name="login_protocol_scroll">小视频产品是由腾讯云计算（北京）有限责任公司（注册地为深圳市南山区粤海街道麻岭社区科技中一路腾讯大厦35层）提供的短视频播放及制作功能产品。如果需要快速、扼要了解我们如何收集您的信息，可以参考《小视频隐私政策摘要》。\n1、当您注册、登录小视频账号时，我们将收集您的登录账号、登录密码等信息；当您使用视频录制、分享、美颜、编辑等功能时，我们将收集您的网络类型、设备生产商、设备型号、人脸面部信息、操作系统版本号等信息；当您使用过程中出现异常上报情况时，我们将收集您的包名、版本、所属进程名等信息。我们仅会根据您使用我们产品与服务的具体功能需求，收集必要的用户信息。您可查阅《已收集个人信息清单》快速了解我们收集和使用您个人信息的情况。\n2、当您使用视频录制、编辑、播放等功能时，我们可能会调用您的存储、相机、麦克风、网络、音频等权限。我们将在首次调用时询问您是否允许使用该权限，您有权拒绝或取消授权。\n3、我们的部分服务可能需要第三方来提供，您可查阅《小视频第三方信息共享清单》快速了解第三方共享信息及第三方SDK情况。\n4、您可以查询、复制、更正、补充、删除或撤回您的个人信息，我们也为您提供注销账户的渠道。您可以通过《小视频隐私保护指引》第6条所列途径及方式快速了解您作为个人信息权利主体的其他权利。\n5、如您对以上内容有任何疑问，可以通过发邮件至Dataprivacy@tencent.com或《小视频隐私保护指引》中列出的其他方式与我们联系。</string>
    <string name="login_protocol_down">如您同意《小视频用户协议》、《小视频隐私保护指引》、《小视频收集个人信息明示清单》、《小视频第三方信息共享清单》以及《儿童隐私保护声明》，请点击“同意”，开始使用我们的产品和服务。</string>
    <!--自定义随机登录名-->

    <string name="app_toast_set_username">请设置用户名</string>
    <string name="app_toast_success_to_set_username">设置成功</string>
    <string name="app_toast_failed_to_set_username">设置失败: %s</string>
    <string name="app_tips_user_name">仅限中文、字母、数字和下划线，2-20个字</string>
    <string name="app_modify_nickname">修改用户昵称</string>
    <string name="app_confirm">确认</string>
    <string name="app_input_nickname_hint">请输入用户昵称</string>
    <string name="user_info_fragment_privacy">隐私条例</string>
    <string name="user_info_fragment_user_agreement">用户协议</string>
    <string name="setting_activity_log_off">注销账户</string>
    <string name="app_btn_confirm">我确定</string>
    <string name="app_btn_cancel">再等等</string>
    <string name="app_logoff_account_title">注销账户</string>
    <string name="app_logoff_cur_account">当前账号：%s</string>
    <string name="app_logoff_confirm">确定要注销账户吗？</string>
    <string name="app_logoff_account_ok">注销成功</string>
    <string name="app_logoff_btn_text">确认注销</string>
    <string name="app_logoff_hint">注销后，您将无法使用当前账号，相关数据\n也将删除无法找回</string>
    <string name="app_sdk_version">SDK版本</string>
    <string name="app_version">应用版本</string>
    <string name="app_tencent_cloud_xiaoshipin">腾讯云小视频</string>
    <string name="app_collection">已收集个人信息清单</string>
    <string name="app_share">第三方共享个人信息清单</string>
<!--    <string name="app_personal_information_collection">个人信息收集说明</string>-->
<!--    <string name="beauty_cam_introduction">在您使用美颜功能时，我们会对您实时拍摄的面部像素信息进行实时智能识别，在美颜过程中会实时收集您的面部像素信息，以为您提供更好的美颜效果，我们不会以任何形式存储或关联您的面部像素信息。该信息为敏感个人信息，请谨慎提供。如您不授权，将无法使用此功能；您也可以随时关闭美颜来禁用此功能。</string>-->
</resources>
