<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_register_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:fitsSystemWindows="true"
    tools:context="com.tencent.qcloud.xiaoshipin.login.TCRegisterActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <RelativeLayout
            android:id="@+id/register_rl_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:drawableLeft="@drawable/btn_back_no_shaddow"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/btn_back_no_shaddow"
                android:textColor="@color/colorTransparentGray"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/activity_register_register_new_user"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_rl_bar"
            android:layout_marginTop="40dp">

            <AutoCompleteTextView
                android:id="@+id/et_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_register_username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_register">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_register_password"
                android:imeActionId="@+id/register"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_password">

            <EditText
                android:id="@+id/et_password_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_register_password_verify"
                android:imeActionId="@+id/register"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_below="@id/til_password_verify"
            android:id="@+id/protocol_layout_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/checkbox_group_register"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:paddingTop="13dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp">

                <CheckBox
                    android:id="@+id/cb_protocol_register"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:background="@drawable/login_check_box_selector"
                    android:button="@null" />
            </RelativeLayout>

            <TextView
                android:layout_toRightOf="@id/checkbox_group_register"
                android:id="@+id/tv_protocol_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/login_main_text"
                android:textSize="12sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/protocol_layout_register"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_login"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/activity_register_register"
            android:textColor="@color/black" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignTop="@+id/btn_register"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_technical_support"
            android:layout_below="@+id/btn_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technical_support"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:textSize="18sp"/>

    </RelativeLayout>

</RelativeLayout>
